# component_creator

./: .flaskenv  .gitignore  .mypy.ini  README.md  config.py  pyproject.toml
.github/workflows/: lint.yaml
app/: __init__.py  extensions.py  helpers.py
app/catalogs/: __init__.py  forms.py  routes.py
app/catalogs/templates/: catalog.html  catalog_create_form.html  catalog_update_form.html  catalogs.html  control.html
app/components/: __init__.py  component_forms.py  forms.py  routes.py
app/components/templates/: component.html  component_create_form.html  component_update_form.html  components.html
app/main/: __init__.py  routes.py
app/main/templates/: home.html  page.html
app/models/: components.py
app/oscal/: catalog.py  component.py  oscal.py  validator.py
app/oscal/schemas/: oscal_component_schema.json
app/static/css/: styles.css  styles.css.map  styles.scss
app/static/js/: accordion.js  add_component.js  scripts.js
app/templates/: 404.html  500.html  catalogs_block.html  components_block.html  footer.html  layout.html  navbar.html  page.html
app/templates/catalogs/: catalog.html  catalogs_block.html  control.html  create_form.html  list.html  update_form.html
app/templates/components/: component.html  components_block.html  control_add_form.html  create_form.html  list.html
app/templates/main/: home.html
tests/: conftest.py
tests/data/: NIST_SP_800-53_rev5_TEST.json  component_one.json  component_two.json
tests/functional/: test_catalog_pages.py  test_home_page.py
tests/unit/: test_catalogs.py  test_components.py  test_helpers.py
