[tool.poetry]
name = "cacc"
version = "0.1.0"
description = ""
authors = ["Tom Camp <tomcamp@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
python-dotenv = "^0.21.0"
Flask-WTF = "^1.0.1"
pytest = "^7.2.0"
coverage = "^7.0.1"
pydantic = "^1.10.2"
pathlib = "^1.0.1"
jsonschema = "^4.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
